--- a/upstream-seed/Cargo.toml
+++ b/upstream-seed/Cargo.toml
@@ -30,4 +30,5 @@ tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
 # radicle-link dependencies. These are patched in the workspace.
 librad = { version = "0", features = ["replication-v3"] }
 link-identities = { version = "0" }
+link-replication = { version = "0" }
 rad-identities = { version = "0" }
