--- a/proxy/api/Cargo.toml
+++ b/proxy/api/Cargo.toml
@@ -15,6 +15,7 @@ default-run = "radicle-proxy"
 anyhow = "1.0"
 async-broadcast = "0.3.4"
 chrono = { version = "0.4.19", features = [ "serde" ] }
+clap = { version =  "3.0", features = ["derive", "env"] }
 data-encoding = "2.3"
 directories = "4.0"
 eip55 = "0.1.1"
@@ -32,7 +33,6 @@ serde_json = "1.0"
 serde_qs = "0.8"
 secstr = { version = "0.3.2", features = [ "serde" ] }
 sha2 = "0.9.8"
-structopt = "0.3.25"
 tempfile = "3.1"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
